# ritmo

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ciccia.json
.obsidian/: workspace.json
docs/: architecture decisions.md  architecture.md  book_metadata_format.json  book_metadata_format.md  development.md  filter-system-usage.md  filters.md  i18n.md  ml-system.md  preset-system-usage.md  sessions.md  workspace.md
docs/sessions/: 2025-01-sessions.md  2025-12-14-session-summary.md  2025-12-14-session3-preset-system.md  2025-12-16-session5-library-presets.md  2025-12-16-session6-relative-date-filters.md  2025-12-17-session7-filter-refactoring.md  2025-12-sessions.md  2026-01-sessions.md  README.md
docs/sessions/2026-01/: session-11-ritmoml-test-coverage-complete.md  session-12-ml-cli-integration-complete--tags-support.md  session-14-roles--language-roles-i18n-integration.md  session-15-i18n-infrastructure-implementation-phase-1.md  session-16-i18ndisplayable-trait-implementation.md  session-17-i18n-phase-2---type-and-format-models.md  session-18-i18n-phase-3---error-messages.md  session-24-opf-metadata-preservation.md  (+8 more)
ebook_parser/: Cargo.toml
locales/: README.md  en.yml  it.yml
mylibcli/database/: ritmo.db
ritmo_cli/: Cargo.toml
ritmo_cli/src/: formatter.rs  helpers.rs  main.rs
ritmo_cli/src/commands/: books.rs  cleanup.rs  contents.rs  deduplication.rs  init.rs  language.rs  libraries.rs  mod.rs  presets.rs  sync.rs
ritmo_config/: Cargo.toml
ritmo_config/src/: app_settings.rs  errors.rs  lib.rs  portable.rs  preset_resolver.rs  presets.rs
ritmo_core/: Cargo.toml
ritmo_core/src/: epub_opf_modifier.rs  epub_utils.rs  lib.rs
ritmo_core/tests/: lib_test.rs
ritmo_db/: Cargo.toml
ritmo_db/schema/: schema.sql
ritmo_db/src/: error_i18n.rs  i18n_trait.rs  i18n_utils.rs  lib.rs
ritmo_db/src/models/: aliases.rs  books.rs  contents.rs  formats.rs  languages.rs  mod.rs  pending_sync.rs  people.rs  publishers.rs  roles.rs  series.rs  tags.rs  types.rs
ritmo_db/tests/: i18n_integration_test.rs  i18n_trait_test.rs  i18n_type_format_test.rs
ritmo_db_core/: Cargo.toml
ritmo_db_core/assets/: template.db
ritmo_db_core/examples/: bootstrap.rs
ritmo_db_core/src/: database.rs  filters.rs  filters_backup.rs  filters_old.rs  lib.rs  library.rs  library_presets.rs  query_builder.rs  results.rs
ritmo_db_core/tests/: database_tests.rs
ritmo_errors/: Cargo.toml
ritmo_errors/src/: lib.rs  reporter.rs
ritmo_gui/: Cargo.toml  README.md
ritmo_gui/src/: main.rs
ritmo_gui/ui/: main_window.slint  theme.slint  types.slint
ritmo_gui/ui/components/: book_card.slint  books_view.slint  content_card.slint  contents_view.slint  empty_state.slint  search_bar.slint  sidebar.slint  status_message.slint
ritmo_mapping/: Cargo.toml
ritmo_mapping/src/: book_mapper.rs  lib.rs  traits.rs
ritmo_ml/: Cargo.toml
ritmo_ml/src/: db_loaders.rs  deduplication.rs  entity_learner.rs  lib.rs  merge.rs  pattern_functions.rs  test_helpers.rs  utils.rs
(+24 files in other folders)
