[workspace]
members = [
    "ritmo_core", # Logica principale e gestione ebook
    "ritmo_gui",       # Interfaccia grafica
    "ritmo_cli",       # Interfaccia command-line
    "ritmo_db",
    "ritmo_db_core", # Gestione database e metadata
    "ritmo_config",    # Configurazione globale applicazione
    "ritmo_mapping" ,
    "ritmo_ml",
    #    "ritmo_search",    # Sistema di ricerca e indicizzazione
    "ritmo_errors" ,
    #    "ebook_parser",
]
resolver = "2"

# Dipendenze condivise per tutto il workspace
[workspace.dependencies]
serde_json = "1.0"
serde = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48", features = ["full"] }
chrono = "0.4"
toml = "0.9"
rust-i18n = "3"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = ["laverdure <pierrot.bru@gmail.com>"]
repository = "https://github.com/pierrotbru/full-ritmo"
