[package]
name = "ritmo_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = "1.0"
ritmo_errors = { path = "../ritmo_errors" }
sha2 = "0.10"
hex = "0.4"
toml = { workspace = true }
rust-i18n = { workspace = true }

[dev-dependencies]
tempfile = "3"
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
